[package]
name = "ballot"
version = "0.1.0"
authors = ["user"]

[dependencies]
exonum = "0.6.0"
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.1"

[dev-dependencies]
exonum-testkit = "0.6.0"
pretty_assertions = "0.5.0"
rand = "0.4"
